# OpenPulseHF

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SBOM.spdx.json  audit.toml  index.html
apps/openpulse-linksim/: Cargo.toml  README.md
apps/openpulse-linksim/examples/: notch_experiment.rs
apps/openpulse-linksim/src/: gui.rs  lib.rs  main.rs  serve.rs
apps/openpulse-linksim/tests/: cessb_ab.rs  serve_integration.rs
apps/openpulse-panel/: Cargo.toml  Trunk.toml  index.html
apps/openpulse-panel-iced/: Cargo.toml
apps/openpulse-panel-iced/src/: app.rs  connection.rs  main.rs  state.rs  ui.rs
apps/openpulse-panel/src/: app.rs  connection.rs  main.rs  state.rs  theme.rs  transport.rs  ui.rs
apps/openpulse-testbench/: Cargo.toml
apps/openpulse-testbench/src/: app.rs  colormap.rs  main.rs  signal_path.rs  state.rs  ui.rs
apps/openpulse-testmatrix/: Cargo.toml
apps/openpulse-testmatrix/src/: bench.rs  cases.rs  channels.rs  compare.rs  main.rs  matrix.rs  report.rs
apps/openpulse-testmatrix/tests/: repro.rs
apps/openpulse-twinview/: Cargo.toml
apps/openpulse-twinview/src/: main.rs
crates/openpulse-ardop/: Cargo.toml
crates/openpulse-ardop/src/: bridge.rs  command.rs  data.rs  error.rs  lib.rs  main.rs  state.rs
crates/openpulse-ardop/tests/: ardop_integration.rs  event_lag.rs  ptt_disconnect_safety.rs
crates/openpulse-audio/: Cargo.toml
crates/openpulse-audio/src/: cpal_backend.rs  fault.rs  flush.rs  lib.rs  loopback.rs
crates/openpulse-audio/tests/: device_enumeration.rs
crates/openpulse-b2f-driver/: Cargo.toml
crates/openpulse-b2f-driver/src/: cmd.rs  data.rs  lib.rs
crates/openpulse-b2f-driver/tests/: cmd_hardening.rs  data_framing.rs  driver_integration.rs  e2e_loopback.rs  iss_failure_paths.rs  timeout_hardening.rs
crates/openpulse-channel/: Cargo.toml
crates/openpulse-channel/src/: awgn.rs  chirp.rs  composite.rs  dsp.rs  fading.rs  flat_fading.rs  gilbert_elliott.rs  lib.rs  qrm.rs  qrn.rs  qsb.rs  sro.rs  watterson.rs
crates/openpulse-cli/: Cargo.toml
crates/openpulse-cli/src/: cli.rs  main.rs  output.rs  pki.rs  plugins.rs  radio.rs  state.rs
crates/openpulse-cli/tests/: calibrate_integration.rs  cli_adaptive.rs  cli_arq.rs  cli_mode_advisor.rs  cli_session_metrics.rs  live_pki_integration.rs  local_state_integration.rs  pki_diagnostics_integration.rs  ptt_wiring_integration.rs
crates/openpulse-config/: Cargo.toml
crates/openpulse-config/src/: lib.rs  logging.rs  secret_file.rs
crates/openpulse-core/: Cargo.toml
crates/openpulse-core/src/: ack.rs  adif.rs  audio.rs  compression.rs  conv.rs  cw_id.rs  dcd.rs  error.rs  fec.rs  frame.rs  handshake.rs  hpx.rs  iq.rs  ldpc.rs  len_prefix.rs  lib.rs  manifest.rs  ota_rate.rs  peer_cache.rs  peer_descriptor.rs  plugin.rs  pq_handshake.rs  profile.rs  query_propagation.rs  rate.rs  relay.rs  remote_control.rs  route_discovery.rs  sar.rs  session_key.rs  signed_envelope.rs  signing.rs  snr_estimate.rs  snr_hysteresis.rs  soft_viterbi.rs  station_id.rs  trust.rs  trust_store_file.rs  turbo.rs  tx_metadata.rs  (+1 more)
crates/openpulse-core/tests/: compression_integration.rs  decoder_robustness.rs  fec_comparison.rs  handshake_integration.rs  ladder_doc_matches_profile.rs  manifest_integration.rs  peer_descriptor_integration.rs  plugin_registration_parity.rs  pq_handshake_integration.rs  query_propagation_integration.rs  rate_adaptation.rs  relay_integration.rs  remote_control_integration.rs  roadmap_profile_table.rs  route_discovery_integration.rs  sar_roundtrip.rs  session_profile.rs  soft_viterbi_integration.rs  success_based_climb.rs  turbo_ber.rs  wire_query_integration.rs  workspace_layering.rs
crates/openpulse-daemon/: Cargo.toml
crates/openpulse-daemon/examples/: twin_station.rs
crates/openpulse-daemon/src/: audit.rs  filexfer.rs  lib.rs  logbook.rs  main.rs  monitor.rs  protocol.rs  ptt.rs  server.rs  twin.rs  ws.rs
crates/openpulse-daemon/tests/: control_auth.rs  control_port.rs  ota_ack_capture_stream.rs  spectrum_integration.rs  twin_daemon_bridge.rs
crates/openpulse-discovery/: Cargo.toml
crates/openpulse-discovery/src/: discovery_sm.rs  hint.rs  hint_assembler.rs  lib.rs  peer_map.rs  rendezvous.rs  rendezvous_assembler.rs  runtime.rs  scheduler.rs  station.rs
crates/openpulse-discovery/tests/: beacon_loopback.rs  rendezvous_end_to_end.rs
crates/openpulse-freedv-auth/: Cargo.toml
crates/openpulse-freedv-auth/src/: beacon.rs  data_port.rs  lib.rs  scheduler.rs  verdict.rs
crates/openpulse-freedv-auth/tests/: freedv_auth_integration.rs
crates/openpulse-gateway/: Cargo.toml
crates/openpulse-gateway/src/: main.rs
crates/openpulse-gpu/: Cargo.toml
crates/openpulse-gpu/src/: demodulate.rs  fft256.rs  ldpc_bp.rs  lib.rs  modulate.rs  rrc_fir.rs  soft_demod.rs
crates/openpulse-gpu/tests/: ldpc_bp_bench.rs
crates/openpulse-keystore/: Cargo.toml
crates/openpulse-keystore/src/: lib.rs  store.rs
crates/openpulse-kiss/: Cargo.toml
crates/openpulse-kiss/src/: ax25.rs  bridge.rs  error.rs  kiss.rs  lib.rs  main.rs  server.rs
crates/openpulse-kiss/tests/: kiss_integration.rs
crates/openpulse-linksec/: Cargo.toml
crates/openpulse-linksec/src/: async_channel.rs  lib.rs  sync_channel.rs
crates/openpulse-mesh/: Cargo.toml
crates/openpulse-mesh/src/: beacon.rs  lib.rs  main.rs
crates/openpulse-mesh/tests/: mesh_loopback.rs
crates/openpulse-modem/: Cargo.toml
crates/openpulse-modem/src/: benchmark.rs  channel_sim.rs  (+9 more)
crates/openpulse-qsy/: Cargo.toml
crates/openpulse-radio/: Cargo.toml
crates/openpulse-repeater/: Cargo.toml
crates/openpulse-tui/: Cargo.toml
pki-tooling/: Cargo.toml
pki-tooling/migrations/: 0001_identity_records.sql  0002_identity_revisions.sql  0003_identity_keys.sql  0004_submissions.sql  0005_moderation_events.sql  0006_audit_events.sql  0007_revocations.sql  0008_trust_bundles.sql  0009_request_tracking.sql  0010_trust_bundle_service_pubkey.sql
pki-tooling/src/: auth.rs  lib.rs  main.rs  startup_env.rs  verification.rs
pki-tooling/tests/: api_flow.rs
plugins/64qam/: Cargo.toml
(+754 files in other folders)
