[workspace]
resolver = "2"
members = [
    "crates/openpulse-core",
    "crates/openpulse-audio",
    "crates/openpulse-modem",
    "crates/openpulse-cli",
    "crates/openpulse-channel",
    "crates/openpulse-radio",
    "crates/openpulse-gpu",
    "crates/openpulse-ardop",
    "plugins/bpsk",
    "plugins/fsk4",
    "plugins/psk8",
    "plugins/qpsk",
    "pki-tooling",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["OpenPulse Contributors"]
repository = "https://github.com/dc0sk/OpenPulse"

[workspace.dependencies]
openpulse-core    = { path = "crates/openpulse-core" }
openpulse-audio   = { path = "crates/openpulse-audio", default-features = false }
openpulse-modem   = { path = "crates/openpulse-modem" }
openpulse-channel = { path = "crates/openpulse-channel" }
openpulse-radio   = { path = "crates/openpulse-radio" }
openpulse-gpu     = { path = "crates/openpulse-gpu" }
openpulse-ardop   = { path = "crates/openpulse-ardop" }
bpsk-plugin       = { path = "plugins/bpsk" }
fsk4-plugin       = { path = "plugins/fsk4" }
psk8-plugin       = { path = "plugins/psk8" }
qpsk-plugin       = { path = "plugins/qpsk" }

thiserror          = "2.0"
anyhow             = "1.0"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
num-complex        = "0.4"
clap               = { version = "4.5", features = ["derive"] }
crossbeam-channel  = "0.5"
rand               = { version = "0.8", features = ["std_rng"] }
rand_distr         = "0.4"
rustfft            = "6.2"
wgpu               = "0.20"
bytemuck           = { version = "1.16", features = ["derive"] }
pollster           = "0.4"
criterion          = { version = "0.5", features = ["html_reports"] }
tokio              = { version = "1", features = ["net", "io-util", "sync", "rt-multi-thread", "macros", "time"] }
