[workspace]
resolver = "2"
members = [
    "crates/openpulse-core",
    "crates/openpulse-audio",
    "crates/openpulse-modem",
    "crates/openpulse-cli",
    "crates/openpulse-channel",
    "crates/openpulse-radio",
    "crates/openpulse-repeater",
    "crates/openpulse-gpu",
    "crates/openpulse-ardop",
    "crates/openpulse-kiss",
    "crates/openpulse-b2f",
    "crates/openpulse-b2f-driver",
    "crates/openpulse-config",
    "crates/openpulse-keystore",
    "crates/openpulse-linksec",
    "crates/openpulse-gateway",
    "crates/openpulse-tui",
    "crates/openpulse-mesh",
    "plugins/64qam",
    "plugins/bpsk",
    "plugins/fsk4",
    "plugins/js8",
    "plugins/mfsk16",
    "plugins/ofdm",
    "plugins/pilot",
    "plugins/psk8",
    "plugins/qpsk",
    "plugins/scfdma",
    "pki-tooling",
    "apps/openpulse-testbench",
    "apps/openpulse-testmatrix",
    "apps/openpulse-panel",
    "apps/openpulse-twinview",
    "apps/openpulse-linksim",
    "crates/openpulse-daemon",
    "crates/openpulse-discovery",
    "crates/openpulse-dsp",
    "crates/openpulse-qsy",
    "crates/openpulse-freedv-auth",
    "crates/openpulse-filexfer",
    "tools/openpulse-dict-trainer",
]

[workspace.package]
version = "0.12.1"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Simon Keimer (DC0SK)"]
repository = "https://github.com/dc0sk/OpenPulse"

[workspace.dependencies]
openpulse-core    = { path = "crates/openpulse-core" }
openpulse-filexfer = { path = "crates/openpulse-filexfer" }
openpulse-audio   = { path = "crates/openpulse-audio", default-features = false }
openpulse-modem   = { path = "crates/openpulse-modem" }
openpulse-channel = { path = "crates/openpulse-channel" }
openpulse-radio   = { path = "crates/openpulse-radio" }
openpulse-repeater = { path = "crates/openpulse-repeater" }
openpulse-gpu     = { path = "crates/openpulse-gpu" }
openpulse-ardop   = { path = "crates/openpulse-ardop" }
openpulse-b2f     = { path = "crates/openpulse-b2f" }
openpulse-b2f-driver = { path = "crates/openpulse-b2f-driver" }
openpulse-config     = { path = "crates/openpulse-config" }
openpulse-keystore   = { path = "crates/openpulse-keystore" }
openpulse-linksec    = { path = "crates/openpulse-linksec" }
openpulse-gateway    = { path = "crates/openpulse-gateway" }
openpulse-mesh       = { path = "crates/openpulse-mesh" }
# default-features = false: consumers (panel, linksim) use only the protocol types, so they
# don't pull the daemon's default `gpu`/native code. The daemon binary itself still builds with
# its own default features (GPU on).
openpulse-daemon     = { path = "crates/openpulse-daemon", default-features = false }
openpulse-discovery  = { path = "crates/openpulse-discovery" }
openpulse-dsp        = { path = "crates/openpulse-dsp" }
openpulse-qsy        = { path = "crates/openpulse-qsy" }
bpsk-plugin       = { path = "plugins/bpsk" }
mfsk16-plugin     = { path = "plugins/mfsk16" }
fsk4-plugin       = { path = "plugins/fsk4" }
js8-plugin        = { path = "plugins/js8" }
ofdm-plugin       = { path = "plugins/ofdm" }
pilot-plugin      = { path = "plugins/pilot" }
psk8-plugin       = { path = "plugins/psk8" }
qam64-plugin      = { path = "plugins/64qam" }
qpsk-plugin       = { path = "plugins/qpsk" }
scfdma-plugin     = { path = "plugins/scfdma" }

thiserror          = "2.0"
anyhow             = "1.0"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender   = "0.2"
serde              = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"
num-complex        = "0.4"
clap               = { version = "4.5", features = ["derive"] }
crossbeam-channel  = "0.5"
rand               = { version = "0.8", features = ["std_rng"] }
rand_distr         = "0.4"
rustfft            = "6.2"
wgpu               = "0.20"
bytemuck           = { version = "1.16", features = ["derive"] }
pollster           = "0.4"
criterion          = { version = "0.5", features = ["html_reports"] }
tokio              = { version = "1", features = ["net", "io-util", "sync", "rt-multi-thread", "macros", "time"] }
ratatui            = "0.30"
crossterm          = "0.28"
flate2             = "1.0"
tar                = "0.4"
oxiarc-lzhuf       = "0.2.7"
sha2               = "0.10"
argon2             = "0.5"
chacha20poly1305   = "0.10"
snow               = "0.9"
eframe             = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui               = "0.29"
egui_plot          = "0.29"
