[package]
name        = "openpulse-linksim"
description = "Two-station bidirectional ARQ link simulator: proves effective two-way transfer rates under simulated SNR / noise conditions"
default-run = "openpulse-linksim"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[lib]
name = "openpulse_linksim"
path = "src/lib.rs"

[[bin]]
name = "openpulse-linksim"
path = "src/main.rs"

[[bin]]
name = "openpulse-linksim-gui"
path = "src/gui.rs"
required-features = ["gui"]

[features]
gui = ["dep:eframe", "dep:egui", "dep:egui_plot"]
# Serve the openpulse-daemon control protocol so an unmodified openpulse-panel can
# connect to a live simulation. Pulls in openpulse-daemon for the wire types.
serve = ["dep:openpulse-daemon", "dep:sysinfo"]

[dependencies]
openpulse-core    = { workspace = true }
openpulse-modem   = { workspace = true }
openpulse-channel = { workspace = true }
openpulse-daemon  = { workspace = true, optional = true }
sysinfo           = { version = "0.30", default-features = false, optional = true }
bpsk-plugin       = { workspace = true }
qpsk-plugin       = { workspace = true }
psk8-plugin       = { workspace = true }
qam64-plugin      = { workspace = true }
fsk4-plugin       = { workspace = true }
ofdm-plugin       = { workspace = true }
scfdma-plugin     = { workspace = true }
pilot-plugin      = { workspace = true }
clap              = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
eframe            = { workspace = true, optional = true }
egui              = { workspace = true, optional = true }
egui_plot         = { workspace = true, optional = true }
