[package]
name        = "openpulse-linksim"
description = "Two-station bidirectional ARQ link simulator: proves effective two-way transfer rates under simulated SNR / noise conditions"
default-run = "openpulse-linksim"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[lib]
name = "openpulse_linksim"
path = "src/lib.rs"

[[bin]]
name = "openpulse-linksim"
path = "src/main.rs"

[[bin]]
name = "openpulse-linksim-gui"
path = "src/gui.rs"
required-features = ["gui"]

[features]
# GPU acceleration is on by default: the GPU-capable plugins use the GPU when an adapter is
# available, falling back to CPU otherwise (build --no-default-features for a lean CPU-only
# build, e.g. CI). gui/serve remain opt-in.
default = ["gpu"]
# The GUI can monitor the TX audio on the default playback device, so it pulls in the
# cpal-backed audio output. (gui is opt-in and not in CI's default build.)
gui = ["dep:eframe", "dep:egui", "dep:egui_plot", "dep:openpulse-audio"]
# Serve the openpulse-daemon control protocol so an unmodified openpulse-panel can
# connect to a live simulation. Pulls in openpulse-daemon for the wire types.
serve = ["dep:openpulse-daemon", "dep:sysinfo"]
# wgpu GPU acceleration for the GPU-capable plugins (auto-detected at runtime).
gpu = [
    "dep:openpulse-gpu",
    "bpsk-plugin/gpu",
    "qpsk-plugin/gpu",
    "psk8-plugin/gpu",
    "qam64-plugin/gpu",
    "scfdma-plugin/gpu",
]

[dependencies]
openpulse-core    = { workspace = true }
openpulse-modem   = { workspace = true }
openpulse-channel = { workspace = true }
openpulse-audio   = { workspace = true, optional = true, features = ["cpal-backend"] }
openpulse-daemon  = { workspace = true, optional = true }
openpulse-gpu     = { workspace = true, optional = true }
sysinfo           = { version = "0.30", default-features = false, optional = true }
bpsk-plugin       = { workspace = true }
qpsk-plugin       = { workspace = true }
psk8-plugin       = { workspace = true }
qam64-plugin      = { workspace = true }
fsk4-plugin       = { workspace = true }
ofdm-plugin       = { workspace = true }
scfdma-plugin     = { workspace = true }
pilot-plugin      = { workspace = true }
clap              = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
eframe            = { workspace = true, optional = true }
egui              = { workspace = true, optional = true }
egui_plot         = { workspace = true, optional = true }
