[package]
name = "openpulse-panel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Operator UI panel for OpenPulseHF (iced): controls band, spectrum, waterfall, ladder, and a tabbed info/config/messages/log panel, with Dark/Light/Contrast/System themes; connects to the openpulse-daemon control port."

[[bin]]
name = "openpulse-panel"
path = "src/main.rs"

[dependencies]
iced = { version = "0.13", features = ["canvas", "tokio"] }
openpulse-daemon = { workspace = true }
openpulse-modem = { workspace = true }
serde_json = { workspace = true }
crossbeam-channel = { workspace = true }
tracing = { workspace = true }
ewebsock = "0.6"
