[package]
name = "openpulse-ardop"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "openpulse-tnc"
path = "src/main.rs"

[dependencies]
openpulse-core.workspace = true
openpulse-audio.workspace = true
openpulse-modem.workspace = true
openpulse-radio.workspace = true
openpulse-config.workspace = true
bpsk-plugin.workspace = true
fsk4-plugin.workspace = true
psk8-plugin.workspace = true
qpsk-plugin.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true

[dev-dependencies]
tokio.workspace = true
