[package]
name        = "openpulse-audio"
description = "Audio backend implementations for the OpenPulse software modem"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[dependencies]
openpulse-core = { workspace = true }
tracing        = { workspace = true }

# cpal is optional so the library still compiles in environments without audio
# headers (CI).  Enable the "cpal-backend" feature for production builds.
cpal = { version = "0.15", optional = true }

[features]
# No default features: CI builds (`cargo build --workspace --no-default-features`)
# and downstream crates that opt into `cpal-backend` get a consistent picture.
# Production builds enable the feature explicitly via `--features cpal-backend`,
# or via the `cpal`/`cpal-backend` feature on the parent crate.
default      = []
cpal-backend = ["dep:cpal"]
