[package]
name = "openpulse-b2f-driver"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
openpulse-b2f.workspace = true
thiserror.workspace = true

[dev-dependencies]
openpulse-modem.workspace = true
openpulse-channel.workspace = true
bpsk-plugin.workspace = true
