[package]
name = "openpulse-channel"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Channel simulation models for OpenPulseHF (AWGN, Gilbert-Elliott, Watterson, QRN/QRM/QSB/Chirp)"

[dependencies]
thiserror.workspace = true
rand.workspace = true
rand_distr.workspace = true
rustfft.workspace = true
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde"]
