[package]
name        = "openpulse-cli"
description = "Command-line interface for the OpenPulse software modem"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
authors.workspace    = true
repository.workspace = true

[[bin]]
name = "openpulse"
path = "src/main.rs"

[features]
default      = ["cpal-backend"]
cpal-backend = ["openpulse-audio/cpal-backend"]
serial       = ["openpulse-radio/serial"]

[dependencies]
openpulse-core  = { workspace = true }
openpulse-audio = { workspace = true }
openpulse-modem = { workspace = true }
openpulse-radio = { workspace = true }
bpsk-plugin     = { workspace = true }
fsk4-plugin     = { workspace = true }
psk8-plugin     = { workspace = true }
qpsk-plugin     = { workspace = true }
anyhow             = { workspace = true }
clap               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tokio              = { workspace = true, features = ["sync"] }
reqwest            = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
mockito = "1.6"
pki-tooling = { path = "../../pki-tooling" }
ed25519-dalek = "2.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres"] }
axum = "0.8"
