[package]
name = "openpulse-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde            = { workspace = true }
thiserror        = { workspace = true }
toml             = { version = "0.8", default-features = false, features = ["parse", "display"] }
dirs             = "5"
ed25519-dalek    = { version = "2.0", features = ["rand_core"] }
rand             = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
