[package]
name        = "openpulse-core"
description = "Core traits, types and frame format for the OpenPulse software modem"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true
repository.workspace  = true

[dependencies]
thiserror  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
hkdf          = "0.12"
sha2          = "0.10"
x25519-dalek  = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
reed-solomon  = "0.2"
ml-dsa        = { version = "0.1.0-rc.9", features = ["rand_core"] }
ml-kem        = { version = "0.3", features = ["getrandom"] }
rand          = "0.8"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
