[package]
name    = "openpulse-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "NDJSON-over-TCP control port for the OpenPulseHF server daemon"

[[bin]]
name = "openpulse-server"
path = "src/main.rs"

[package.metadata.deb]
name = "openpulse-server"
maintainer = "OpenPulse Contributors"
copyright = "2025 OpenPulse Contributors"
license-file = ["../../LICENSE", "4"]
extended-description = "OpenPulseHF daemon: NDJSON control port and WebSocket endpoint for the operator GUI"
depends = "$auto"
section = "hamradio"
priority = "optional"

[features]
# GPU acceleration is ON by default: the GPU-capable plugins use the GPU when an adapter is
# available, falling back to CPU otherwise. Build --no-default-features for a lean CPU-only
# build (CI, headless servers, WASM protocol use).
default = ["gpu"]
# Enable real audio hardware support (CPAL backend).  Off by default so CI builds
# don't require ALSA/CoreAudio headers.  For production: cargo build --features cpal
cpal = ["openpulse-audio/cpal-backend"]
# Generic TOML-scripted serial CAT backend (cat_backend = "generic"); Unix-only.
generic-serial = ["openpulse-radio/generic-serial"]
# wgpu GPU acceleration for the GPU-capable plugins; reports our-kernel GPU load in
# SystemMetrics. Auto-detected at runtime (GpuContext::init).
gpu = [
    "dep:openpulse-gpu",
    "bpsk-plugin/gpu",
    "qpsk-plugin/gpu",
    "psk8-plugin/gpu",
    "qam64-plugin/gpu",
    "scfdma-plugin/gpu",
]

[dependencies]
# Protocol types only; compiles for all targets including WASM.
openpulse-core   = { workspace = true }
openpulse-discovery = { workspace = true }
openpulse-modem  = { workspace = true }
serde            = { workspace = true, features = ["derive"] }
serde_json       = { workspace = true }
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Server runtime; not needed when openpulse-daemon is used as a protocol library in WASM.
openpulse-radio   = { workspace = true }
openpulse-audio   = { workspace = true }
openpulse-config  = { workspace = true }
openpulse-linksec = { workspace = true, features = ["tokio"] }
openpulse-channel = { workspace = true }
openpulse-filexfer = { workspace = true }
sha2              = { workspace = true }
rand             = { workspace = true }
openpulse-qsy     = { workspace = true }
openpulse-repeater = { workspace = true }
bpsk-plugin      = { workspace = true }
fsk4-plugin      = { workspace = true }
ofdm-plugin      = { workspace = true }
psk8-plugin      = { workspace = true }
qam64-plugin     = { workspace = true }
qpsk-plugin      = { workspace = true }
scfdma-plugin    = { workspace = true }
pilot-plugin     = { workspace = true }
tracing-subscriber = { workspace = true }
tokio            = { workspace = true, features = ["net", "io-util", "sync", "rt-multi-thread", "macros", "time"] }
tokio-tungstenite = "0.23"
futures-util     = { version = "0.3", default-features = false, features = ["sink", "std"] }
sysinfo          = { version = "0.30", default-features = false }
openpulse-gpu    = { workspace = true, optional = true }

[dev-dependencies]
openpulse-audio  = { workspace = true }
bpsk-plugin      = { workspace = true }
ed25519-dalek    = { version = "2.0" }
