[package]
name = "openpulse-keystore"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Secret storage for OpenPulse: a master-password-encrypted file keystore (Argon2id + ChaCha20-Poly1305), with an OS-keychain backend."

[dependencies]
openpulse-config = { workspace = true }
thiserror        = { workspace = true }
serde_json       = { workspace = true }
rand             = { workspace = true }
argon2           = { workspace = true }
chacha20poly1305 = { workspace = true }
